--- a/SpotifyAlarmClock/Base.lproj/Main.storyboard
+++ b/SpotifyAlarmClock/Base.lproj/Main.storyboard
@@ -530,11 +530,86 @@
                             <outlet property="delegate" destination="Anl-o5-ySN" id="ZoY-s5-X86"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Songs" id="qpm-pd-6Wt"/>
+                    <navigationItem key="navigationItem" title="Songs" id="qpm-pd-6Wt">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="bpD-l4-CX4">
+                            <connections>
+                                <segue destination="OY4-PY-rDx" kind="modal" id="eTe-xm-DIW"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JbP-Hf-27E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3605" y="-329"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="df4-9G-34q">
+            <objects>
+                <navigationController id="OY4-PY-rDx" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nwf-9s-FAK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.093663677010000002" green="0.42857142860000003" blue="0.15435124059999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.093663677010000002" green="0.42857142860000003" blue="0.15435124059999999" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="mgH-p2-COw" kind="relationship" relationship="rootViewController" id="y4g-yK-FF3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F27-Qw-6Kh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4096" y="-331"/>
+        </scene>
+        <!--Song Select-->
+        <scene sceneID="eY5-QF-27r">
+            <objects>
+                <tableViewController id="mgH-p2-COw" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="cdK-Pw-54I">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="Q2o-8H-MLF">
+                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <scopeButtonTitles>
+                                <string>Title</string>
+                                <string>Title</string>
+                            </scopeButtonTitles>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Kks-ae-HR9">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kks-ae-HR9" id="ZAb-O4-su8">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="mgH-p2-COw" id="PFz-On-1pN"/>
+                            <outlet property="delegate" destination="mgH-p2-COw" id="l2O-ff-atB"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Song Select" id="MGe-eW-oMO">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="NI8-hc-sEU"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="5Av-nY-w9Q" id="0Bz-L3-5jg"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xnu-zh-gAD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="5Av-nY-w9Q">
+                    <connections>
+                        <outlet property="delegate" destination="mgH-p2-COw" id="LlO-Uc-bZ0"/>
+                        <outlet property="searchContentsController" destination="mgH-p2-COw" id="qaa-PN-hmP"/>
+                        <outlet property="searchResultsDataSource" destination="mgH-p2-COw" id="LX5-xV-Zib"/>
+                        <outlet property="searchResultsDelegate" destination="mgH-p2-COw" id="1hC-64-i8q"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="4602" y="-333"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mlx-uY-shS">
